# how-does-overlay-injection-work-gic-2023-talk

debug-console/: Cargo.toml
debug-console/src/: main.rs
main/: index.html  main.js  package.json
main/app/: main.js  package.json
main/ui/src/: App.tsx  index.css
overlay-driver/: .gitignore  Cargo.toml  build.rs
overlay-driver-injector/: Cargo.toml
overlay-driver-injector/src/: main.rs
overlay-driver/src/: apply_d3d11_state.rs  capture_d3d11_state.rs  client.rs  d3d11_hook.rs  d3d11_overlay.rs  d3d11_pixel_shader.hlsl  d3d11_pixel_shader_obj_bytes.rs  d3d11_shader_common.hlsl  d3d11_state_block.rs  d3d11_vertex_shader.hlsl  d3d11_vertex_shader_obj_bytes.rs  debug_console_client.rs  dll_main.rs  get_input_event_key_code.rs  init.rs  input_hook.rs  lib.rs  overlay.rs  proto.proto  release_d3d11_state.rs
