[package]
name = "overlay-driver"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "^0.4.0"
simplelog = "^0.12.0"
scopeguard = "^1.0.0"
widestring = "^0.4.0"
detour = { version = "^0.8.0", default_features = false }
lazy_static = "^1.0.0"
protobuf = "^2.0.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "audioclient",
    "mmdeviceapi",
    "combaseapi",
    "ksmedia",
    "guiddef",
    "std",
    "basetsd",
    "d3d10",
    "d3d10effect",
    "d3d10misc",
    "d3d11",
    "d3d12",
    "d3d9",
    "d3d9types",
    "d3dcommon",
    "dxgi",
    "dxgi1_2",
    "dxgi1_4",
    "dxgiformat",
    "dxgitype",
    "handleapi",
    "libloaderapi",
    "minwindef",
    "ntdef",
    "synchapi",
    "unknwnbase",
    "windef",
    "wingdi",
    "winnt",
    "winuser",
    "windowsx",
    "winbase",
]

[build-dependencies]
protoc-rust = "^2.0.0"
find-winsdk = "^0.2.0"
